[gd_scene load_steps=3 format=3 uid="uid://bt7s1xjkhff68"]

[ext_resource type="Script" path="res://scenes/gui/main_menu.gd" id="1_k4ky7"]
[ext_resource type="PackedScene" uid="uid://dtx8gs4evobhc" path="res://scenes/gui/main_menu_button.tscn" id="1_n07qg"]

[node name="MainMenuVboxContainer" type="VBoxContainer"]
offset_right = 1175.0
offset_bottom = 621.0
theme_override_constants/separation = 5
alignment = 2
script = ExtResource("1_k4ky7")

[node name="Continue" parent="." instance=ExtResource("1_n07qg")]
layout_mode = 2
text = "Continue"

[node name="NewGame" parent="." instance=ExtResource("1_n07qg")]
layout_mode = 2
text = "New Game"

[node name="Settings" parent="." instance=ExtResource("1_n07qg")]
layout_mode = 2
text = "Settings"

[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
